# media-framework

./: .gitignore  README.MD  build.gradle  config.gradle  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/handy/media/framework/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/handy/media/application/: MainApplication.kt
app/src/main/java/com/handy/media/framework/: CameraActivity.java  CameraSourceActivity.java  MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/handy/media/framework/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
logger/: build.gradle  build.gradle.kts
logger/src/androidTest/java/com/handy/logger/: ExampleInstrumentedTest.java
logger/src/main/: AndroidManifest.xml
logger/src/main/cpp/: CMakeLists.txt  logger.cpp  logger.h
logger/src/main/java/com/handy/logger/: LimitLogger.kt  Logger.java
logger/src/test/java/com/handy/logger/: ExampleUnitTest.java
media-camera/: build.gradle  build.gradle.kts
media-camera/src/androidTest/java/com/handy/media/camera/: ExampleInstrumentedTest.java
media-camera/src/debug/: AndroidManifest.xml
media-camera/src/debug/java/com/handy/media/camera/: CameraV1SourceActivity.java  CameraXSourceActivity.java
media-camera/src/main/: AndroidManifest.xml
media-camera/src/main/java/com/handy/media/camera/: Camera2Impl.java  CameraFactory.java  CameraFactory.kt  CameraImpl.java  CameraSize.kt  CameraSource.kt  CameraType.java  CameraV1Impl.kt  CameraV2Impl.kt  CameraXImpl.kt  ICamera.java  OnPreviewFrameCallback.kt
media-camera/src/main/java/com/handy/media/constants/: CameraType.java
media-common/: build.gradle  build.gradle.kts
media-common/src/main/: AndroidManifest.xml
media-decode/: build.gradle  build.gradle.kts
media-decode/src/main/: AndroidManifest.xml
media-decode/src/main/cpp/: CMakeLists.txt
media-decode/src/main/cpp/faad2/: CMakeLists.txt
media-decode/src/main/cpp/m4adec/: CMakeLists.txt  NewM4aDecoder.cpp  NewM4aDecoder.h
media-encode/: build.gradle  build.gradle.kts
media-encode/src/main/cpp/: CMakeLists.txt  audio_encoder_jni.cc  audio_encoder_jni.h
media-encode/src/main/cpp/lame/: CMakeLists.txt  audio_encoder_lame_impl.cc  audio_encoder_lame_impl.h
media-record/: README.MD  build.gradle  build.gradle.kts
media-record/src/debug/: AndroidManifest.xml
media-record/src/debug/res/layout/: debug_activity_media_record.xml
media-record/src/debug/res/values/: strings.xml
media-record/src/main/: AndroidManifest.xml
media-record/src/main/cpp/: CMakeLists.txt
media-record/src/main/cpp/common/: android_debug.h
media-record/src/main/cpp/include/oboe/: AudioStream.h  AudioStreamBuilder.h
media-record/src/main/cpp/oboe/: CMakeLists.txt
media-record/src/main/cpp/player/: CMakeLists.txt  media_audio_player.cc  media_audio_player.h
media-record/src/main/cpp/record/: CMakeLists.txt  media_record.cc  media_record.h
media-record/src/main/cpp/record/include/: media_record.h
media-record/src/main/cpp/record/src/: media_record.cc
media-record/src/main/cpp/recorder/: CMakeLists.txt  audio_recorder_observer.cc  audio_recorder_observer.h  media_audio_recorder.cc  media_audio_recorder.h  media_audio_recorder_jni.cc  media_audio_recorder_jni.h  recorder_aaudio_impl.cc  recorder_aaudio_impl.h  recorder_oboe_impl.cc  recorder_oboe_impl.h  recorder_opensles_impl.cc  recorder_opensles_impl.h
media-record/src/main/java/com/handy/media/: AudioChannels.java  AudioSampleRate.java
(+35 files in other folders)
